[package]
name = "pmsa003i"
description = "Plantower PMSA003I Driver for Embedded HAL"
version = "0.1.0"
edition = "2021"

authors = ["Brian Bustin"]

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bbustin/pmsa003i"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
defmt = { version = "0.3.8", optional = true }

[features]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"]
