[package]
name = "pmsa003i"
description = "Plantower PMSA003I Driver for Embedded HAL"
version = "0.1.2"
edition = "2021"

authors = ["Brian Bustin"]

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bbustin/pmsa003i"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
defmt = { version = "0.3.8", optional = true }
document-features = "0.2.10"

[features]
## enables async operation
async = ["dep:embedded-hal-async"]
## derives defmt::Format for types and errors to help with logging
defmt = ["dep:defmt"]
